src/vm/snapshots/hebi__vm__tests__call_class_method.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  v = 10
  fn test(self):
    return self.v
T().test()


# Result:
Int(
    10,
)
