src/vm/snapshots/hebi__vm__tests__call_class_method_derived.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  v = 0
  fn test(self):
    return self.v
class U(T):
  fn test(self):
    return super.test()
U().test()


# Result:
Ok(
    Int(
        0,
    ),
)
