src/vm/snapshots/hebi__vm__tests__call_class_method_derived2.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  fn test(self, v):
    return v
class U(T):
  fn test(self, v):
    return super.test(v)
U().test(10)


# Result:
Ok(
    Int(
        10,
    ),
)
