src/vm/snapshots/hebi__vm__tests__call_class_nested_inheritance_method_static_call.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
class A:
  fn test(self, v):
    return v + 1
class B(A):
  fn test(self, v):
    return super.test(v) + 1
class C(B):
  fn test(self, v):
    return super.test(v) + 1

C.test(C(), 0)


# Result:
Ok(
    Int(
        3,
    ),
)
