src/vm/snapshots/hebi__vm__tests__call_fn_recursive.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
fn test(v):
  if v: return "yo"
  else: return test(true)

test(true)
test(false)


# Result:
Ok(
    Object(
        "yo",
    ),
)
